nextflow/non-experimental/work/e4/46f301f6a229c033c9d4de62080f06/.command.log
  File "/g/data/xl04/ka6418/github/ausarg/nextflow/non-experimental/work/e4/46f301f6a229c033c9d4de62080f06/.command.sh", line 105
    file_prefix = f"BASDU"_"PAF987"_"PACBIO_SMRT"
                          ^
SyntaxError: invalid syntax

======================================================================================
                  Resource Usage on 2023-11-21 10:39:00:
   Job Id:             101928708.gadi-pbs
   Project:            xl04
   Exit Status:        1
   Service Units:      0.01
   NCPUs Requested:    8                      NCPUs Used: 8               
                                           CPU Time Used: 00:00:01        
   Memory Requested:   16.0GB                Memory Used: 71.83MB         
   Walltime requested: 01:00:00            Walltime Used: 00:00:03        
   JobFS requested:    100.0MB                JobFS used: 0B              
======================================================================================
